--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -19,6 +19,7 @@ html, body, #root {
 }
 
 p, h1 { margin: 0; }
+span { opacity: 0.5; }
 .title {
     font-size: 48px;
     font-weight: 700;
@@ -49,9 +50,6 @@ header .left .logo {
     color: var(--color);
     text-decoration: none;
     letter-spacing: 3.92px;
-}
-header .left span {
-    opacity: 0.5;
 }
 header .left .title {
     height: 59px;
@@ -116,4 +114,10 @@ footer {
     font-size: 16px;
     font-family: var(--font-family);
 }
-.thumbnail div span { opacity: 0.5; }
+
+.specs {
+    text-align: right;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
